@@ -2,6 +2,7 @@ Tue Aug 19 02:39:41 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* syncase.scm: Don't tamper with debug mode setting when enabling
 	macros.  Instead cut the stack with start-stack.
+	Load psyntax.pp with recording of positions turned off.
 
 	* psyntax.pp, psyntax.ss (quasiquote): Changed fx= --> =.
 
